--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -1,7 +1,7 @@
 .login-box {
     width: 100%;
     max-width: 400px; /* Giới hạn chiều rộng */
-    background-color: rgba(255, 255, 255, 0.5); /* Màu nền với độ mờ */
+    background-color: white; /* Màu nền với độ mờ */
     /* backdrop-filter: blur(20px); Hiệu ứng làm mờ */
     border-radius: 16px; /* Bo góc */
     padding: 32px;
