--- a/src/index.css
+++ b/src/index.css
@@ -265,3 +265,14 @@ code {
     background-position: 0% center;
   }
 }
+
+.fixed-section {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  /* hoặc min-height: 100vh; */
+  z-index: -1;
+  /* Đặt z-index thấp để nội dung bên dưới hiển thị lên trên */
+}
