--- a/src/index.css
+++ b/src/index.css
@@ -317,3 +317,55 @@ code {
   z-index: -1;
 }
 
+@keyframes fadeDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeRight {
+  0% {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+/* Class cho laptop fade từ trên xuống */
+.fadeDown {
+  animation: fadeDown 2s ease forwards;
+}
+
+/* Class cho phone từ trái sang */
+.fadeLeft {
+  animation: fadeLeft 2s ease  forwards;
+  /* Delay 0.2s */
+}
+
+/* Class cho tablet từ phải sang */
+.fadeRight {
+  animation: fadeRight 2s ease  forwards;
+  /* Delay 0.4s */
+}
